k8s/frontend/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: task-manager-frontend-service
  namespace: task-manager
spec:
  selector:
    app: task-manager-frontend
  ports:
  - port: 80
    targetPort: 80
    name: http
  type: ClusterIP
