k8s/frontend/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: task-manager-ingress
  namespace: task-manager
spec:
  ingressClassName: traefik
  rules:
  - host: tm.ggdevs.site
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: task-manager-frontend-service
            port:
              number: 80
